--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dist": "NODE_ENV=production webpack && node scripts/zip.js",
     "test": "npm run unit-test && npm run e2e-test",
     "test-prod": "NODE_ENV=production npm run unit-test && npm run e2e-test",
-    "unit-test": "jest __tests__/.*.spec.js --silent",
+    "unit-test": "jest __tests__/.*.spec.js --runInBand",
     "e2e-test": "jest __e2e-tests__ --runInBand --silent"
   },
   "pre-commit": [
