--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "npm run unit-test && npm run e2e-test",
     "test-prod": "NODE_ENV=production npm run unit-test && npm run e2e-test",
     "unit-test": "jest __tests__/.*.spec.js --runInBand",
-    "e2e-test": "jest __e2e-tests__ --runInBand --silent"
+    "e2e-test": "jest __e2e-tests__ --runInBand --silent",
+    "update-snapshot": "jest --updateSnapshot"
   },
   "pre-commit": [
     "test-prod"
